[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thc4me"
version = "0.3.0"
requires-python = ">=3.9"
dependencies = ["lief","pefile","fastapi","uvicorn","python-multipart"]
authors = [{name="Jerrod Baker"}]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["thc4me*"]

[project.scripts]
thc4me = "thc4me.cli:main"
thc4me-daemon = "thc4me.daemon:main"
